--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </header>
     <main id="sections">
-      <section class="section1">
+      <section id="section1">
         <div class="titre1">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
           <p>En plein centre ville ou en pleine nature</p>
@@ -70,7 +70,7 @@
         </div>
       </section>
 
-      <section class="section2">
+      <section id="section2">
         <h2>Hébergements à Marseille</h2>
         <div class="cards">
           <a class="card_a" href="#">
@@ -176,37 +176,60 @@
         </div>
       </aside>
 
-      <section class="section3">
-        <h2>Activités à Marseille</h2>
-        <div>
-          <div>
-            <a href="#"
-              ><img src="public\images\activites\3_medium\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="paysage" />
-              <h3>Vieux Port</h3></a
-            >
-            <a href="#"
-              ><img src="public\images\activites\3_medium\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="paysage" />
-              <h3>Fort de Pomègues</h3></a
-            >
-            <a href="#"
-              ><img src="public\images\activites\3_medium\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="paysage" />
-              <h3>île du Frioul</h3></a
-            >
+      <section id="section3">
+        <header id="title_actvities">
+          <h2>Activités à Marseille</h2>
+        </header>
+        <div class="activities">
+          <div class="activities1">
+            <div class="activity_big">
+              <a href="#">
+                <div class="activity_big_container">
+                  <img src="public\images\activites\2_large\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="paysage" />
+                  <h3>Vieux Port</h3>
+                </div>
+              </a>
+            </div>
+            <div class="activities_SetM">
+              <a href="#">
+                <div class="activity_medium_container">
+                  <img src="public\images\activites\3_medium\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="paysage" />
+                  <h3>Fort de Pomègues</h3>
+                </div>
+              </a>
+              <a href="#">
+                <div class="activity_small_container">
+                  <img src="public\images\activites\3_medium\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="paysage" />
+                  <h3>Île du Frioul</h3>
+                </div>
+              </a>
+            </div>
           </div>
-          <a href="#"
-            ><img src="public\images\activites\3_medium\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="paysage" />
-            <h3>Parc Nationnal de Calanques</h3></a
-          >
-          <a href="#"
-            ><img src="public\images\activites\3_medium\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="paysage" />
-            <h3>Notre-Dame-de-la-Garde</h3></a
-          >
-          <a href="#"
-            ><img src="public\images\activites\3_medium\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="paysage" />
-            <h3>Parc Longchamp</h3></a
-          >
+          <div class="activities2">
+            <div class="activity_big">
+              <a href="#">
+                <div class="activity_big_container">
+                  <img src="public\images\activites\3_medium\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="paysage" />
+                  <h3>Parc Nationnal de Calanques</h3>
+                </div>
+              </a>
+            </div>
+            <div class="activities_SetM">
+              <a href="#">
+                <div class="activity_small_container">
+                  <img src="public\images\activites\3_medium\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="paysage" />
+                  <h3>Notre-Dame-de-la-Garde</h3>
+                </div>
+              </a>
+              <a href="#">
+                <div class="activity_medium_container">
+                  <img src="public\images\activites\3_medium\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="paysage" />
+                  <h3>Parc Longchamp</h3>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
-        <div></div>
       </section>
     </main>
     <footer>
