--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div>
+    <footer id="footer">
+      <div class="footer_div">
         <h2>A propos</h2>
         <ul>
           <a href="#"><li>Fonctionnement du site</li></a>
@@ -241,14 +241,14 @@
           <a href="#"><li>Données de confidentalité</li></a>
         </ul>
       </div>
-      <div>
+      <div class="footer_div">
         <h2>Nos hébergements</h2>
         <ul>
           <a href="#"><li>Charte qualité</li></a>
           <a href="#"><li>Soumettre votre hôtel</li></a>
         </ul>
       </div>
-      <div>
+      <div class="footer_div">
         <h2>Assistance</h2>
         <ul>
           <a href="#"><li>Centre d'aide</li></a>
