--- a/index.html
+++ b/index.html
@@ -233,27 +233,33 @@
       </section>
     </main>
     <footer id="footer">
-      <div class="footer_div">
+      <div class="footer_div1">
         <h2>A propos</h2>
-        <ul>
-          <a href="#"><li>Fonctionnement du site</li></a>
-          <a href="#"><li>Conditions générakes de vente</li></a>
-          <a href="#"><li>Données de confidentalité</li></a>
-        </ul>
+        <div class="footer_ul">
+          <ul>
+            <a href="#"><li>Fonctionnement du site</li></a>
+            <a href="#"><li>Conditions générakes de vente</li></a>
+            <a href="#"><li>Données de confidentalité</li></a>
+          </ul>
+        </div>
       </div>
-      <div class="footer_div">
+      <div class="footer_div2">
         <h2>Nos hébergements</h2>
-        <ul>
-          <a href="#"><li>Charte qualité</li></a>
-          <a href="#"><li>Soumettre votre hôtel</li></a>
-        </ul>
+        <div class="footer_ul">
+          <ul>
+            <a href="#"><li>Charte qualité</li></a>
+            <a href="#"><li>Soumettre votre hôtel</li></a>
+          </ul>
+        </div>
       </div>
-      <div class="footer_div">
+      <div class="footer_div3">
         <h2>Assistance</h2>
-        <ul>
-          <a href="#"><li>Centre d'aide</li></a>
-          <a href="#"><li>Nosu contacter</li></a>
-        </ul>
+        <div class="footer_ul">
+          <ul>
+            <a href="#"><li>Centre d'aide</li></a>
+            <a href="#"><li>Nosu contacter</li></a>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="https://kit.fontawesome.com/0c37ba36d5.js" crossorigin="anonymous"></script>
