--- a/index.html
+++ b/index.html
@@ -233,33 +233,21 @@
       </section>
     </main>
     <footer id="footer">
-      <div class="footer_div1">
+      <div class="footer_div">
         <h2>A propos</h2>
-        <div class="footer_ul">
-          <ul>
-            <a href="#"><li>Fonctionnement du site</li></a>
-            <a href="#"><li>Conditions générakes de vente</li></a>
-            <a href="#"><li>Données de confidentalité</li></a>
-          </ul>
-        </div>
+        <a href="#">Fonctionnement du site</a>
+        <a href="#">Conditions générakes de vente</a>
+        <a href="#">Données de confidentalité</a>
       </div>
-      <div class="footer_div2">
+      <div class="footer_div">
         <h2>Nos hébergements</h2>
-        <div class="footer_ul">
-          <ul>
-            <a href="#"><li>Charte qualité</li></a>
-            <a href="#"><li>Soumettre votre hôtel</li></a>
-          </ul>
-        </div>
+        <a href="#">Charte qualité</a>
+        <a href="#">Soumettre votre hôtel</a>
       </div>
-      <div class="footer_div3">
+      <div class="footer_div">
         <h2>Assistance</h2>
-        <div class="footer_ul">
-          <ul>
-            <a href="#"><li>Centre d'aide</li></a>
-            <a href="#"><li>Nosu contacter</li></a>
-          </ul>
-        </div>
+        <a href="#">Centre d'aide</a>
+        <a href="#">Nosu contacter</a>
       </div>
     </footer>
     <script src="https://kit.fontawesome.com/0c37ba36d5.js" crossorigin="anonymous"></script>
