--- a/index.html
+++ b/index.html
@@ -12,17 +12,13 @@
   <body>
     <header id="header">
       <a id="logo_main" href="index.html"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
-      <ul class="nav_header">
-        <li class="li_1">
+      <div class="header-right">
+        <nav class="nav">
           <a href="#">Hebergements</a>
-        </li>
-        <li class="li_2">
           <a href="#">Activités</a>
-        </li>
-        <li class="sinscrire">
-          <a href="#">S'inscrire</a>
-        </li>
-      </ul>
+        </nav>
+        <a class="sinscrire" href="#">S'inscrire</a>
+      </div>
     </header>
     <main id="sections">
       <section id="section1">
