--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <a id="logo_main" href="index.html"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
       <div class="header-right">
         <nav class="nav">
-          <a href="#">Hebergements</a>
-          <a href="#">Activités</a>
+          <a class="nav-hébergements" href="#">Hebergements</a>
+          <a class="nav-activités" href="#">Activités</a>
         </nav>
         <a class="sinscrire" href="#">S'inscrire</a>
       </div>
